fix header cutoff on mobile

--- a/src/css/report.styl
+++ b/src/css/report.styl
@@ -257,6 +257,15 @@ hr
         top 10px
     .share-container
         top -5px
+
+@media screen and (max-width: 500px)
+    .report-component
+        width 100%
+        min-width 0
+    .map__container
+        display flex
+        flex-direction column
+        
 @media print
     body
         width 1200px
